Flamegraph: Fix overflow style not applied

--- a/src/view/components/devtools.css
+++ b/src/view/components/devtools.css
@@ -996,7 +996,7 @@
 	background: var(--color-profiler-old);
 }
 
-.flamegraph-node[data-overflow] .text {
+.flamegraph-node[data-overflow] .flamegraph-text {
 	display: none;
 }
 
